example-log-bundle/w-guard-wg-cp-svtk6-lqtxw-2025-11-27_04_19_09/networking/iptablesnat
Chain PREROUTING (policy ACCEPT 0 packets, 0 bytes)
 pkts bytes target     prot opt in     out     source               destination         
 177K 9768K cali-PREROUTING  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cali:6gwbT8clXdHdC1b1 */
 177K 9769K KUBE-SERVICES  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kubernetes service portals */

Chain INPUT (policy ACCEPT 0 packets, 0 bytes)
 pkts bytes target     prot opt in     out     source               destination         

Chain OUTPUT (policy ACCEPT 0 packets, 0 bytes)
 pkts bytes target     prot opt in     out     source               destination         
1490K   90M cali-OUTPUT  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cali:tVnHkvAo15HuiPy0 */
1491K   90M KUBE-SERVICES  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kubernetes service portals */

Chain POSTROUTING (policy ACCEPT 0 packets, 0 bytes)
 pkts bytes target     prot opt in     out     source               destination         
1496K   90M KUBE-POSTROUTING  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kubernetes postrouting rules */
1495K   90M cali-POSTROUTING  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cali:0i8pjzKKPyA34aQD */

Chain KUBE-EXT-UDVXCUUPV3TWYDKW (2 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* masquerade traffic for demo-backend/backend-svc external destinations */
    0     0 KUBE-SVC-UDVXCUUPV3TWYDKW  all  --  *      *       0.0.0.0/0            0.0.0.0/0           

Chain KUBE-KUBELET-CANARY (0 references)
 pkts bytes target     prot opt in     out     source               destination         

Chain KUBE-MARK-MASQ (96 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 MARK       all  --  *      *       0.0.0.0/0            0.0.0.0/0            MARK or 0x4000

Chain KUBE-NODEPORTS (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-EXT-UDVXCUUPV3TWYDKW  tcp  --  *      *       0.0.0.0/0            127.0.0.0/8          /* demo-backend/backend-svc */ nfacct-name  localhost_nps_accepted_pkts
    0     0 KUBE-EXT-UDVXCUUPV3TWYDKW  tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* demo-backend/backend-svc */

Chain KUBE-POSTROUTING (1 references)
 pkts bytes target     prot opt in     out     source               destination         
 8266  498K RETURN     all  --  *      *       0.0.0.0/0            0.0.0.0/0           
    0     0 MARK       all  --  *      *       0.0.0.0/0            0.0.0.0/0            MARK xor 0x4000
    0     0 MASQUERADE  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kubernetes service traffic requiring SNAT */ random-fully

Chain KUBE-PROXY-CANARY (0 references)
 pkts bytes target     prot opt in     out     source               destination         

Chain KUBE-SEP-27HDLAN2OMVP53B7 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.20.88          0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-etcd-proxy:pp-proxy */
    3   180 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-etcd-proxy:pp-proxy */ tcp to:10.42.20.88:8080

Chain KUBE-SEP-2BW3IWP2DAO5VI5C (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.207.10         0.0.0.0/0            /* cattle-system/cattle-cluster-agent:https-internal */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-system/cattle-cluster-agent:https-internal */ tcp to:10.42.207.10:444

Chain KUBE-SEP-2THVF4XV5EU3ZPXS (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.207.12         0.0.0.0/0            /* cattle-system/cattle-cluster-agent:https-internal */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-system/cattle-cluster-agent:https-internal */ tcp to:10.42.207.12:444

Chain KUBE-SEP-3EJXMAENS6PA5TNJ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.197        0.0.0.0/0            /* kube-system/rke2-ingress-nginx-controller-admission:https-webhook */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-ingress-nginx-controller-admission:https-webhook */ tcp to:10.42.236.197:8443

Chain KUBE-SEP-3MTJL6YLVVP4DUO5 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.74          0.0.0.0/0            /* longhorn-system/longhorn-conversion-webhook:conversion-webhook */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-conversion-webhook:conversion-webhook */ tcp to:10.42.60.74:9501

Chain KUBE-SEP-3SHTPU44VOUWKIZX (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.84          0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-scheduler-proxy:pp-proxy */
    2   120 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-scheduler-proxy:pp-proxy */ tcp to:10.42.60.84:8080

Chain KUBE-SEP-4FAGCKTPFUKXVWAR (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.194        0.0.0.0/0            /* kube-system/rke2-coredns-rke2-coredns:udp-53 */
  860 76440 DNAT       udp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-coredns-rke2-coredns:udp-53 */ udp to:10.42.236.194:53

Chain KUBE-SEP-4XV5GCIHOE6UZQVZ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.20.76          0.0.0.0/0            /* longhorn-system/longhorn-recovery-backend:recovery-backend */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-recovery-backend:recovery-backend */ tcp to:10.42.20.76:9503

Chain KUBE-SEP-5XEDYP5EIPN4BW4X (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.20.76          0.0.0.0/0            /* longhorn-system/longhorn-backend:manager */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-backend:manager */ tcp to:10.42.20.76:9500

Chain KUBE-SEP-6LG3EDEMRQHDULPO (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.207.10         0.0.0.0/0            /* cattle-system/cattle-cluster-agent:http */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-system/cattle-cluster-agent:http */ tcp to:10.42.207.10:80

Chain KUBE-SEP-6YLB6OMTAAGHUWQ2 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.70          0.0.0.0/0            /* demo-frontend/frontend-svc */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* demo-frontend/frontend-svc */ tcp to:10.42.60.70:80

Chain KUBE-SEP-A2J7EKAZNUIJPVKB (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.87          0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus:http-web */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus:http-web */ tcp to:10.42.60.87:8081

Chain KUBE-SEP-BMQM5RYMOV3K655N (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.207.3          0.0.0.0/0            /* kube-system/rke2-coredns-rke2-coredns:tcp-53 */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-coredns-rke2-coredns:tcp-53 */ tcp to:10.42.207.3:53

Chain KUBE-SEP-C2F2NJYQA2OGQMLC (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.86          0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-kube-state-metrics:http */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-kube-state-metrics:http */ tcp to:10.42.60.86:8080

Chain KUBE-SEP-CETKDPRB4XVEPXEF (1 references)
 pkts bytes target     prot opt in     out     source               destination         
   24  1440 KUBE-MARK-MASQ  all  --  *      *       134.199.165.191      0.0.0.0/0            /* default/kubernetes:https */
  714 42840 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:https */ tcp to:134.199.165.191:6443

Chain KUBE-SEP-CMLJ3UCZ2EWO6T2V (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.204        0.0.0.0/0            /* longhorn-system/longhorn-recovery-backend:recovery-backend */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-recovery-backend:recovery-backend */ tcp to:10.42.236.204:9503

Chain KUBE-SEP-CQ6AM2NIQIU57G2U (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.20.73          0.0.0.0/0            /* demo-backend/backend-svc */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* demo-backend/backend-svc */ tcp to:10.42.20.73:8080

Chain KUBE-SEP-CRKV7RYZO4CA6CZQ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.212        0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-alertmanager:http-web */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-alertmanager:http-web */ tcp to:10.42.236.212:9093

Chain KUBE-SEP-CXEJNOA3ZBPRSCR5 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       134.199.144.255      0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics */ tcp to:134.199.144.255:10249

Chain KUBE-SEP-DZT2I4ZDY7XPOYL6 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.195        0.0.0.0/0            /* kube-system/rke2-metrics-server:https */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-metrics-server:https */ tcp to:10.42.236.195:10250

Chain KUBE-SEP-E7HEK4AFR6T3WERX (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.20.87          0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-proxy:pp-proxy */
    2   120 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-proxy:pp-proxy */ tcp to:10.42.20.87:8080

Chain KUBE-SEP-EIY732PNOFHHIQ7T (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.20.72          0.0.0.0/0            /* kube-system/pushprox-ingress-nginx-client:metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/pushprox-ingress-nginx-client:metrics */ tcp to:10.42.20.72:10254

Chain KUBE-SEP-ERQO2O27TXDWHZNK (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.203        0.0.0.0/0            /* longhorn-system/longhorn-frontend:http */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-frontend:http */ tcp to:10.42.236.203:8000

Chain KUBE-SEP-EUDFX5WWRVX5TEST (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       134.199.165.191      0.0.0.0/0            /* calico-system/calico-typha:calico-typha */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* calico-system/calico-typha:calico-typha */ tcp to:134.199.165.191:5473

Chain KUBE-SEP-EVSNOTTPINK5I7GP (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.67          0.0.0.0/0            /* kube-system/pushprox-ingress-nginx-client:metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/pushprox-ingress-nginx-client:metrics */ tcp to:10.42.60.67:10254

Chain KUBE-SEP-F7S5577A6ZNFSPI6 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.20.76          0.0.0.0/0            /* longhorn-system/longhorn-conversion-webhook:conversion-webhook */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-conversion-webhook:conversion-webhook */ tcp to:10.42.20.76:9501

Chain KUBE-SEP-FBONYXDCZYUS66OX (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.83          0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-operator:https */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-operator:https */ tcp to:10.42.60.83:10250

Chain KUBE-SEP-FKKKRNWJV3IF47YW (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       209.38.91.232        0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics */ tcp to:209.38.91.232:10249

Chain KUBE-SEP-FV26N6VYHXVXEHIW (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.194        0.0.0.0/0            /* kube-system/rke2-coredns-rke2-coredns:tcp-53 */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-coredns-rke2-coredns:tcp-53 */ tcp to:10.42.236.194:53

Chain KUBE-SEP-HDHKH3WYYOHIW2LM (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       134.199.165.191      0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics */ tcp to:134.199.165.191:9796

Chain KUBE-SEP-HRQZN5HMG7OT3UJ4 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.85          0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-controller-manager-proxy:pp-proxy */
    2   120 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-controller-manager-proxy:pp-proxy */ tcp to:10.42.60.85:8080

Chain KUBE-SEP-HZEHZT7X3ULDWZKC (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.20.75          0.0.0.0/0            /* longhorn-system/longhorn-frontend:http */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-frontend:http */ tcp to:10.42.20.75:8000

Chain KUBE-SEP-IAC2W3GOJYBJEQJY (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.20.90          0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-grafana:nginx-http */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-grafana:nginx-http */ tcp to:10.42.20.90:8080

Chain KUBE-SEP-IS7RHQCHB53RVMPD (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.20.76          0.0.0.0/0            /* longhorn-system/longhorn-admission-webhook:admission-webhook */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-admission-webhook:admission-webhook */ tcp to:10.42.20.76:9502

Chain KUBE-SEP-JH4AWE3MBLQPK244 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       134.199.165.191      0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-scheduler-client:metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-scheduler-client:metrics */ tcp to:134.199.165.191:10259

Chain KUBE-SEP-JQXXHRHTRP43NH2Z (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       134.199.165.191      0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-controller-manager-client:metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-controller-manager-client:metrics */ tcp to:134.199.165.191:10257

Chain KUBE-SEP-JYDKPX6DVENULHXV (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       170.64.187.24        0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics */ tcp to:170.64.187.24:10249

Chain KUBE-SEP-KEQF6G5KHL2ZIEF4 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       209.38.91.232        0.0.0.0/0            /* calico-system/calico-typha:calico-typha */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* calico-system/calico-typha:calico-typha */ tcp to:209.38.91.232:5473

Chain KUBE-SEP-LASVFMRDUWSGYCGQ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.207.13         0.0.0.0/0            /* cattle-system/rancher-webhook:https */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-system/rancher-webhook:https */ tcp to:10.42.207.13:9443

Chain KUBE-SEP-LGTKZ2DSVFSMWCDQ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       170.64.187.24        0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics */ tcp to:170.64.187.24:9796

Chain KUBE-SEP-LKLYRKOCFPASG5FO (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       209.38.91.232        0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics */ tcp to:209.38.91.232:9796

Chain KUBE-SEP-MR4SNJP7N4I5MJC5 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.200        0.0.0.0/0            /* demo-frontend/frontend-svc */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* demo-frontend/frontend-svc */ tcp to:10.42.236.200:80

Chain KUBE-SEP-NCRQ3ZFXVKBDYXJ2 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       134.199.165.191      0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics */ tcp to:134.199.165.191:10249

Chain KUBE-SEP-OGFQMBDAC6TKQTCJ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.204        0.0.0.0/0            /* longhorn-system/longhorn-admission-webhook:admission-webhook */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-admission-webhook:admission-webhook */ tcp to:10.42.236.204:9502

Chain KUBE-SEP-PWGRZXJTFHT3DEJJ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       134.199.144.255      0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics */ tcp to:134.199.144.255:9796

Chain KUBE-SEP-SU4RI2JQCGIKYJU7 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.72          0.0.0.0/0            /* default/basic-web-svc */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* default/basic-web-svc */ tcp to:10.42.60.72:80

Chain KUBE-SEP-T5GDSH5UDNVSBBBD (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       134.199.165.191      0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-etcd-client:metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-etcd-client:metrics */ tcp to:134.199.165.191:2381

Chain KUBE-SEP-TDJETFWVGGPWXXGZ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.67          0.0.0.0/0            /* kube-system/rke2-ingress-nginx-controller-admission:https-webhook */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-ingress-nginx-controller-admission:https-webhook */ tcp to:10.42.60.67:8443

Chain KUBE-SEP-U75AFFWW4NVNO5AO (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.74          0.0.0.0/0            /* longhorn-system/longhorn-recovery-backend:recovery-backend */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-recovery-backend:recovery-backend */ tcp to:10.42.60.74:9503

Chain KUBE-SEP-UVS77VWFGEGINJWJ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.212        0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-alertmanager:reloader-web */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-alertmanager:reloader-web */ tcp to:10.42.236.212:8080

Chain KUBE-SEP-VWMAUWN2G3PKN7SD (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.74          0.0.0.0/0            /* longhorn-system/longhorn-backend:manager */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-backend:manager */ tcp to:10.42.60.74:9500

Chain KUBE-SEP-W2INZDPAMSHMJ6BH (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.74          0.0.0.0/0            /* longhorn-system/longhorn-admission-webhook:admission-webhook */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-admission-webhook:admission-webhook */ tcp to:10.42.60.74:9502

Chain KUBE-SEP-WLNEGUPYXN364HXH (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.60.87          0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus:reloader-web */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus:reloader-web */ tcp to:10.42.60.87:8080

Chain KUBE-SEP-XVATE2C77IUSW7SZ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.204        0.0.0.0/0            /* longhorn-system/longhorn-conversion-webhook:conversion-webhook */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-conversion-webhook:conversion-webhook */ tcp to:10.42.236.204:9501

Chain KUBE-SEP-Y4DRWWGMCJXLQWNT (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.20.89          0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-adapter:https */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-adapter:https */ tcp to:10.42.20.89:6443

Chain KUBE-SEP-Y7CKTLQYNBT2IHXQ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.207.3          0.0.0.0/0            /* kube-system/rke2-coredns-rke2-coredns:udp-53 */
  818 72194 DNAT       udp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-coredns-rke2-coredns:udp-53 */ udp to:10.42.207.3:53

Chain KUBE-SEP-YY7LQNSI52JC4GEO (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.20.72          0.0.0.0/0            /* kube-system/rke2-ingress-nginx-controller-admission:https-webhook */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-ingress-nginx-controller-admission:https-webhook */ tcp to:10.42.20.72:8443

Chain KUBE-SEP-Z62NRHH5E3IPFBI7 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.207.12         0.0.0.0/0            /* cattle-system/cattle-cluster-agent:http */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-system/cattle-cluster-agent:http */ tcp to:10.42.207.12:80

Chain KUBE-SEP-ZHT3WDXRH2LELU6J (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.197        0.0.0.0/0            /* kube-system/pushprox-ingress-nginx-client:metrics */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/pushprox-ingress-nginx-client:metrics */ tcp to:10.42.236.197:10254

Chain KUBE-SEP-ZWH452QYBB22FZMS (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.42.236.204        0.0.0.0/0            /* longhorn-system/longhorn-backend:manager */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-backend:manager */ tcp to:10.42.236.204:9500

Chain KUBE-SERVICES (2 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-SVC-DISNXZXWEI7GIGLU  tcp  --  *      *       0.0.0.0/0            10.43.48.23          /* cattle-system/cattle-cluster-agent:https-internal cluster IP */
    0     0 KUBE-SVC-UDVXCUUPV3TWYDKW  tcp  --  *      *       0.0.0.0/0            10.43.10.180         /* demo-backend/backend-svc cluster IP */
    0     0 KUBE-SVC-EZW4DS5HT4GROINA  tcp  --  *      *       0.0.0.0/0            10.43.113.211        /* cattle-monitoring-system/rancher-monitoring-prometheus:reloader-web cluster IP */
    0     0 KUBE-SVC-6MECGK62JNIKDRLL  tcp  --  *      *       0.0.0.0/0            10.43.106.123        /* demo-frontend/frontend-svc cluster IP */
    0     0 KUBE-SVC-V6M6RRQXTSHVF7LK  tcp  --  *      *       0.0.0.0/0            10.43.227.236        /* default/basic-web-svc cluster IP */
    0     0 KUBE-SVC-NGSMBSSFRDULITT4  tcp  --  *      *       0.0.0.0/0            10.43.59.17          /* longhorn-system/longhorn-conversion-webhook:conversion-webhook cluster IP */
    0     0 KUBE-SVC-S4EMHPZ44GDBMEWI  tcp  --  *      *       0.0.0.0/0            10.43.229.143        /* longhorn-system/longhorn-admission-webhook:admission-webhook cluster IP */
    0     0 KUBE-SVC-WSX3IQ6WDZKL2S34  tcp  --  *      *       0.0.0.0/0            10.43.9.86           /* cattle-monitoring-system/rancher-monitoring-operator:https cluster IP */
    0     0 KUBE-SVC-R2YIKPX5C2B4PRH7  tcp  --  *      *       0.0.0.0/0            10.43.6.31           /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics cluster IP */
    0     0 KUBE-SVC-DAM77X32V24O2EL5  tcp  --  *      *       0.0.0.0/0            10.43.10.204         /* cattle-monitoring-system/pushprox-kube-etcd-client:metrics cluster IP */
    0     0 KUBE-SVC-JAGPXAZKZK76XVSE  tcp  --  *      *       0.0.0.0/0            10.43.64.89          /* cattle-monitoring-system/pushprox-kube-controller-manager-client:metrics cluster IP */
    0     0 KUBE-SVC-RXZQBFX6IWO22WWW  tcp  --  *      *       0.0.0.0/0            10.43.48.23          /* cattle-system/cattle-cluster-agent:http cluster IP */
    0     0 KUBE-SVC-SX5Y67UR33APG6CK  tcp  --  *      *       0.0.0.0/0            10.43.63.193         /* cattle-monitoring-system/pushprox-kube-scheduler-client:metrics cluster IP */
   16   960 KUBE-SVC-NPX46M4PTMTKRN6Y  tcp  --  *      *       0.0.0.0/0            10.43.0.1            /* default/kubernetes:https cluster IP */
    0     0 KUBE-SVC-PUNXDRXNIM3ELMDM  tcp  --  *      *       0.0.0.0/0            10.43.0.10           /* kube-system/rke2-coredns-rke2-coredns:tcp-53 cluster IP */
    0     0 KUBE-SVC-HP77IKALGGR6UULO  tcp  --  *      *       0.0.0.0/0            10.43.198.51         /* kube-system/rke2-metrics-server:https cluster IP */
    0     0 KUBE-SVC-46CB5Z6CZH2WFWVP  tcp  --  *      *       0.0.0.0/0            10.43.67.110         /* kube-system/rke2-ingress-nginx-controller-admission:https-webhook cluster IP */
    0     0 KUBE-SVC-ELE3EOWUPGZLKWXO  tcp  --  *      *       0.0.0.0/0            10.43.19.114         /* longhorn-system/longhorn-frontend:http cluster IP */
    0     0 KUBE-SVC-VDF2XRPMF7GCOKCC  tcp  --  *      *       0.0.0.0/0            10.43.248.104        /* cattle-monitoring-system/pushprox-kube-scheduler-proxy:pp-proxy cluster IP */
    0     0 KUBE-SVC-JQ5LIQLHTIZNWLOX  tcp  --  *      *       0.0.0.0/0            10.43.35.174         /* cattle-monitoring-system/pushprox-kube-etcd-proxy:pp-proxy cluster IP */
    0     0 KUBE-SVC-D72WHH2PHGEL4SRX  tcp  --  *      *       0.0.0.0/0            10.43.192.58         /* cattle-monitoring-system/rancher-monitoring-alertmanager:reloader-web cluster IP */
    0     0 KUBE-SVC-RK657RLKDNVNU64O  tcp  --  *      *       0.0.0.0/0            10.43.29.34          /* calico-system/calico-typha:calico-typha cluster IP */
    0     0 KUBE-SVC-EW6UA3DC2CVRQ4ND  tcp  --  *      *       0.0.0.0/0            10.43.26.63          /* cattle-monitoring-system/pushprox-kube-controller-manager-proxy:pp-proxy cluster IP */
    0     0 KUBE-SVC-F3PZ5PNOTTIABLQ5  tcp  --  *      *       0.0.0.0/0            10.43.162.3          /* kube-system/pushprox-ingress-nginx-client:metrics cluster IP */
    0     0 KUBE-SVC-REY7A7JAMMNC25ZM  tcp  --  *      *       0.0.0.0/0            10.43.172.21         /* cattle-monitoring-system/rancher-monitoring-prometheus-adapter:https cluster IP */
    0     0 KUBE-SVC-TYVUZ72JN6SHFAXC  tcp  --  *      *       0.0.0.0/0            10.43.51.105         /* longhorn-system/longhorn-recovery-backend:recovery-backend cluster IP */
    0     0 KUBE-SVC-NQL64TY2T3FWFXFQ  tcp  --  *      *       0.0.0.0/0            10.43.123.164        /* longhorn-system/longhorn-backend:manager cluster IP */
    0     0 KUBE-SVC-JCCTHMVVOJD7CTXD  tcp  --  *      *       0.0.0.0/0            10.43.192.58         /* cattle-monitoring-system/rancher-monitoring-alertmanager:http-web cluster IP */
    0     0 KUBE-SVC-6EEFEXJOUC5HRC2U  tcp  --  *      *       0.0.0.0/0            10.43.221.21         /* cattle-monitoring-system/rancher-monitoring-grafana:nginx-http cluster IP */
    0     0 KUBE-SVC-4WFNQVGMHXINT2VO  tcp  --  *      *       0.0.0.0/0            10.43.75.117         /* cattle-monitoring-system/pushprox-kube-proxy-proxy:pp-proxy cluster IP */
    0     0 KUBE-SVC-OEKFV6TG6AAIHGRX  tcp  --  *      *       0.0.0.0/0            10.43.214.63         /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics cluster IP */
   16  1392 KUBE-SVC-YFPH5LFNKP7E3G4L  udp  --  *      *       0.0.0.0/0            10.43.0.10           /* kube-system/rke2-coredns-rke2-coredns:udp-53 cluster IP */
    0     0 KUBE-SVC-BOJCKSINR77JVVPB  tcp  --  *      *       0.0.0.0/0            10.43.83.142         /* cattle-system/rancher-webhook:https cluster IP */
    0     0 KUBE-SVC-BSZMNEG7M6JICBTH  tcp  --  *      *       0.0.0.0/0            10.43.113.211        /* cattle-monitoring-system/rancher-monitoring-prometheus:http-web cluster IP */
    0     0 KUBE-SVC-2ABN56CTNX325LLI  tcp  --  *      *       0.0.0.0/0            10.43.118.208        /* cattle-monitoring-system/rancher-monitoring-kube-state-metrics:http cluster IP */
 7153  424K KUBE-NODEPORTS  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kubernetes service nodeports; NOTE: this must be the last rule in this chain */ ADDRTYPE match dst-type LOCAL

Chain KUBE-SVC-2ABN56CTNX325LLI (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.118.208        /* cattle-monitoring-system/rancher-monitoring-kube-state-metrics:http cluster IP */
    0     0 KUBE-SEP-C2F2NJYQA2OGQMLC  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-kube-state-metrics:http -> 10.42.60.86:8080 */

Chain KUBE-SVC-46CB5Z6CZH2WFWVP (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.67.110         /* kube-system/rke2-ingress-nginx-controller-admission:https-webhook cluster IP */
    0     0 KUBE-SEP-YY7LQNSI52JC4GEO  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-ingress-nginx-controller-admission:https-webhook -> 10.42.20.72:8443 */ statistic mode random probability 0.33333333349
    0     0 KUBE-SEP-3EJXMAENS6PA5TNJ  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-ingress-nginx-controller-admission:https-webhook -> 10.42.236.197:8443 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-TDJETFWVGGPWXXGZ  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-ingress-nginx-controller-admission:https-webhook -> 10.42.60.67:8443 */

Chain KUBE-SVC-4WFNQVGMHXINT2VO (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    2   120 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.75.117         /* cattle-monitoring-system/pushprox-kube-proxy-proxy:pp-proxy cluster IP */
    2   120 KUBE-SEP-E7HEK4AFR6T3WERX  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-proxy:pp-proxy -> 10.42.20.87:8080 */

Chain KUBE-SVC-6EEFEXJOUC5HRC2U (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.221.21         /* cattle-monitoring-system/rancher-monitoring-grafana:nginx-http cluster IP */
    0     0 KUBE-SEP-IAC2W3GOJYBJEQJY  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-grafana:nginx-http -> 10.42.20.90:8080 */

Chain KUBE-SVC-6MECGK62JNIKDRLL (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.106.123        /* demo-frontend/frontend-svc cluster IP */
    0     0 KUBE-SEP-MR4SNJP7N4I5MJC5  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* demo-frontend/frontend-svc -> 10.42.236.200:80 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-6YLB6OMTAAGHUWQ2  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* demo-frontend/frontend-svc -> 10.42.60.70:80 */

Chain KUBE-SVC-BOJCKSINR77JVVPB (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.83.142         /* cattle-system/rancher-webhook:https cluster IP */
    0     0 KUBE-SEP-LASVFMRDUWSGYCGQ  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-system/rancher-webhook:https -> 10.42.207.13:9443 */

Chain KUBE-SVC-BSZMNEG7M6JICBTH (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.113.211        /* cattle-monitoring-system/rancher-monitoring-prometheus:http-web cluster IP */
    0     0 KUBE-SEP-A2J7EKAZNUIJPVKB  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus:http-web -> 10.42.60.87:8081 */

Chain KUBE-SVC-D72WHH2PHGEL4SRX (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.192.58         /* cattle-monitoring-system/rancher-monitoring-alertmanager:reloader-web cluster IP */
    0     0 KUBE-SEP-UVS77VWFGEGINJWJ  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-alertmanager:reloader-web -> 10.42.236.212:8080 */

Chain KUBE-SVC-DAM77X32V24O2EL5 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.10.204         /* cattle-monitoring-system/pushprox-kube-etcd-client:metrics cluster IP */
    0     0 KUBE-SEP-T5GDSH5UDNVSBBBD  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-etcd-client:metrics -> 134.199.165.191:2381 */

Chain KUBE-SVC-DISNXZXWEI7GIGLU (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.48.23          /* cattle-system/cattle-cluster-agent:https-internal cluster IP */
    0     0 KUBE-SEP-2BW3IWP2DAO5VI5C  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-system/cattle-cluster-agent:https-internal -> 10.42.207.10:444 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-2THVF4XV5EU3ZPXS  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-system/cattle-cluster-agent:https-internal -> 10.42.207.12:444 */

Chain KUBE-SVC-ELE3EOWUPGZLKWXO (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.19.114         /* longhorn-system/longhorn-frontend:http cluster IP */
    0     0 KUBE-SEP-HZEHZT7X3ULDWZKC  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-frontend:http -> 10.42.20.75:8000 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-ERQO2O27TXDWHZNK  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-frontend:http -> 10.42.236.203:8000 */

Chain KUBE-SVC-EW6UA3DC2CVRQ4ND (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    2   120 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.26.63          /* cattle-monitoring-system/pushprox-kube-controller-manager-proxy:pp-proxy cluster IP */
    2   120 KUBE-SEP-HRQZN5HMG7OT3UJ4  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-controller-manager-proxy:pp-proxy -> 10.42.60.85:8080 */

Chain KUBE-SVC-EZW4DS5HT4GROINA (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.113.211        /* cattle-monitoring-system/rancher-monitoring-prometheus:reloader-web cluster IP */
    0     0 KUBE-SEP-WLNEGUPYXN364HXH  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus:reloader-web -> 10.42.60.87:8080 */

Chain KUBE-SVC-F3PZ5PNOTTIABLQ5 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.162.3          /* kube-system/pushprox-ingress-nginx-client:metrics cluster IP */
    0     0 KUBE-SEP-EIY732PNOFHHIQ7T  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/pushprox-ingress-nginx-client:metrics -> 10.42.20.72:10254 */ statistic mode random probability 0.33333333349
    0     0 KUBE-SEP-ZHT3WDXRH2LELU6J  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/pushprox-ingress-nginx-client:metrics -> 10.42.236.197:10254 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-EVSNOTTPINK5I7GP  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/pushprox-ingress-nginx-client:metrics -> 10.42.60.67:10254 */

Chain KUBE-SVC-HP77IKALGGR6UULO (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.198.51         /* kube-system/rke2-metrics-server:https cluster IP */
    0     0 KUBE-SEP-DZT2I4ZDY7XPOYL6  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-metrics-server:https -> 10.42.236.195:10250 */

Chain KUBE-SVC-JAGPXAZKZK76XVSE (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.64.89          /* cattle-monitoring-system/pushprox-kube-controller-manager-client:metrics cluster IP */
    0     0 KUBE-SEP-JQXXHRHTRP43NH2Z  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-controller-manager-client:metrics -> 134.199.165.191:10257 */

Chain KUBE-SVC-JCCTHMVVOJD7CTXD (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.192.58         /* cattle-monitoring-system/rancher-monitoring-alertmanager:http-web cluster IP */
    0     0 KUBE-SEP-CRKV7RYZO4CA6CZQ  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-alertmanager:http-web -> 10.42.236.212:9093 */

Chain KUBE-SVC-JQ5LIQLHTIZNWLOX (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    3   180 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.35.174         /* cattle-monitoring-system/pushprox-kube-etcd-proxy:pp-proxy cluster IP */
    3   180 KUBE-SEP-27HDLAN2OMVP53B7  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-etcd-proxy:pp-proxy -> 10.42.20.88:8080 */

Chain KUBE-SVC-NGSMBSSFRDULITT4 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.59.17          /* longhorn-system/longhorn-conversion-webhook:conversion-webhook cluster IP */
    0     0 KUBE-SEP-F7S5577A6ZNFSPI6  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-conversion-webhook:conversion-webhook -> 10.42.20.76:9501 */ statistic mode random probability 0.33333333349
    0     0 KUBE-SEP-XVATE2C77IUSW7SZ  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-conversion-webhook:conversion-webhook -> 10.42.236.204:9501 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-3MTJL6YLVVP4DUO5  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-conversion-webhook:conversion-webhook -> 10.42.60.74:9501 */

Chain KUBE-SVC-NPX46M4PTMTKRN6Y (1 references)
 pkts bytes target     prot opt in     out     source               destination         
   24  1440 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.0.1            /* default/kubernetes:https cluster IP */
  714 42840 KUBE-SEP-CETKDPRB4XVEPXEF  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:https -> 134.199.165.191:6443 */

Chain KUBE-SVC-NQL64TY2T3FWFXFQ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.123.164        /* longhorn-system/longhorn-backend:manager cluster IP */
    0     0 KUBE-SEP-5XEDYP5EIPN4BW4X  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-backend:manager -> 10.42.20.76:9500 */ statistic mode random probability 0.33333333349
    0     0 KUBE-SEP-ZWH452QYBB22FZMS  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-backend:manager -> 10.42.236.204:9500 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-VWMAUWN2G3PKN7SD  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-backend:manager -> 10.42.60.74:9500 */

Chain KUBE-SVC-OEKFV6TG6AAIHGRX (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.214.63         /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics cluster IP */
    0     0 KUBE-SEP-PWGRZXJTFHT3DEJJ  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics -> 134.199.144.255:9796 */ statistic mode random probability 0.25000000000
    0     0 KUBE-SEP-HDHKH3WYYOHIW2LM  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics -> 134.199.165.191:9796 */ statistic mode random probability 0.33333333349
    0     0 KUBE-SEP-LGTKZ2DSVFSMWCDQ  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics -> 170.64.187.24:9796 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-LKLYRKOCFPASG5FO  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-node-exporter:http-metrics -> 209.38.91.232:9796 */

Chain KUBE-SVC-PUNXDRXNIM3ELMDM (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.0.10           /* kube-system/rke2-coredns-rke2-coredns:tcp-53 cluster IP */
    0     0 KUBE-SEP-BMQM5RYMOV3K655N  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-coredns-rke2-coredns:tcp-53 -> 10.42.207.3:53 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-FV26N6VYHXVXEHIW  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-coredns-rke2-coredns:tcp-53 -> 10.42.236.194:53 */

Chain KUBE-SVC-R2YIKPX5C2B4PRH7 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.6.31           /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics cluster IP */
    0     0 KUBE-SEP-CXEJNOA3ZBPRSCR5  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics -> 134.199.144.255:10249 */ statistic mode random probability 0.25000000000
    0     0 KUBE-SEP-NCRQ3ZFXVKBDYXJ2  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics -> 134.199.165.191:10249 */ statistic mode random probability 0.33333333349
    0     0 KUBE-SEP-JYDKPX6DVENULHXV  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics -> 170.64.187.24:10249 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-FKKKRNWJV3IF47YW  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-proxy-client:metrics -> 209.38.91.232:10249 */

Chain KUBE-SVC-REY7A7JAMMNC25ZM (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.172.21         /* cattle-monitoring-system/rancher-monitoring-prometheus-adapter:https cluster IP */
    0     0 KUBE-SEP-Y4DRWWGMCJXLQWNT  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-prometheus-adapter:https -> 10.42.20.89:6443 */

Chain KUBE-SVC-RK657RLKDNVNU64O (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.29.34          /* calico-system/calico-typha:calico-typha cluster IP */
    0     0 KUBE-SEP-EUDFX5WWRVX5TEST  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* calico-system/calico-typha:calico-typha -> 134.199.165.191:5473 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-KEQF6G5KHL2ZIEF4  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* calico-system/calico-typha:calico-typha -> 209.38.91.232:5473 */

Chain KUBE-SVC-RXZQBFX6IWO22WWW (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.48.23          /* cattle-system/cattle-cluster-agent:http cluster IP */
    0     0 KUBE-SEP-6LG3EDEMRQHDULPO  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-system/cattle-cluster-agent:http -> 10.42.207.10:80 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-Z62NRHH5E3IPFBI7  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-system/cattle-cluster-agent:http -> 10.42.207.12:80 */

Chain KUBE-SVC-S4EMHPZ44GDBMEWI (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.229.143        /* longhorn-system/longhorn-admission-webhook:admission-webhook cluster IP */
    0     0 KUBE-SEP-IS7RHQCHB53RVMPD  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-admission-webhook:admission-webhook -> 10.42.20.76:9502 */ statistic mode random probability 0.33333333349
    0     0 KUBE-SEP-OGFQMBDAC6TKQTCJ  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-admission-webhook:admission-webhook -> 10.42.236.204:9502 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-W2INZDPAMSHMJ6BH  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-admission-webhook:admission-webhook -> 10.42.60.74:9502 */

Chain KUBE-SVC-SX5Y67UR33APG6CK (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.63.193         /* cattle-monitoring-system/pushprox-kube-scheduler-client:metrics cluster IP */
    0     0 KUBE-SEP-JH4AWE3MBLQPK244  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-scheduler-client:metrics -> 134.199.165.191:10259 */

Chain KUBE-SVC-TYVUZ72JN6SHFAXC (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.51.105         /* longhorn-system/longhorn-recovery-backend:recovery-backend cluster IP */
    0     0 KUBE-SEP-4XV5GCIHOE6UZQVZ  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-recovery-backend:recovery-backend -> 10.42.20.76:9503 */ statistic mode random probability 0.33333333349
    0     0 KUBE-SEP-CMLJ3UCZ2EWO6T2V  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-recovery-backend:recovery-backend -> 10.42.236.204:9503 */ statistic mode random probability 0.50000000000
    0     0 KUBE-SEP-U75AFFWW4NVNO5AO  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* longhorn-system/longhorn-recovery-backend:recovery-backend -> 10.42.60.74:9503 */

Chain KUBE-SVC-UDVXCUUPV3TWYDKW (2 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.10.180         /* demo-backend/backend-svc cluster IP */
    0     0 KUBE-SEP-CQ6AM2NIQIU57G2U  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* demo-backend/backend-svc -> 10.42.20.73:8080 */

Chain KUBE-SVC-V6M6RRQXTSHVF7LK (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.227.236        /* default/basic-web-svc cluster IP */
    0     0 KUBE-SEP-SU4RI2JQCGIKYJU7  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* default/basic-web-svc -> 10.42.60.72:80 */

Chain KUBE-SVC-VDF2XRPMF7GCOKCC (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    2   120 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.248.104        /* cattle-monitoring-system/pushprox-kube-scheduler-proxy:pp-proxy cluster IP */
    2   120 KUBE-SEP-3SHTPU44VOUWKIZX  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/pushprox-kube-scheduler-proxy:pp-proxy -> 10.42.60.84:8080 */

Chain KUBE-SVC-WSX3IQ6WDZKL2S34 (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.9.86           /* cattle-monitoring-system/rancher-monitoring-operator:https cluster IP */
    0     0 KUBE-SEP-FBONYXDCZYUS66OX  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cattle-monitoring-system/rancher-monitoring-operator:https -> 10.42.60.83:10250 */

Chain KUBE-SVC-YFPH5LFNKP7E3G4L (1 references)
 pkts bytes target     prot opt in     out     source               destination         
  110 12906 KUBE-MARK-MASQ  udp  --  *      *      !10.42.0.0/16         10.43.0.10           /* kube-system/rke2-coredns-rke2-coredns:udp-53 cluster IP */
  818 72194 KUBE-SEP-Y7CKTLQYNBT2IHXQ  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-coredns-rke2-coredns:udp-53 -> 10.42.207.3:53 */ statistic mode random probability 0.50000000000
  860 76440 KUBE-SEP-4FAGCKTPFUKXVWAR  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/rke2-coredns-rke2-coredns:udp-53 -> 10.42.236.194:53 */

Chain cali-OUTPUT (1 references)
 pkts bytes target     prot opt in     out     source               destination         
1490K   90M cali-fip-dnat  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cali:GBTAv2p5CwevEyJm */

Chain cali-POSTROUTING (1 references)
 pkts bytes target     prot opt in     out     source               destination         
1495K   90M cali-fip-snat  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cali:Z-c7XtVd2Bq7s_hA */
1495K   90M cali-nat-outgoing  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cali:nYKhEzDlr11Jccal */
    0     0 MASQUERADE  all  --  *      vxlan.calico  0.0.0.0/0            0.0.0.0/0            /* cali:e9dnSgSVNmIcpVhP */ ADDRTYPE match src-type !LOCAL limit-out ADDRTYPE match src-type LOCAL random-fully
    0     0 MASQUERADE  all  --  *      wireguard.cali  0.0.0.0/0            0.0.0.0/0            /* cali:kgfCOPW4UKtzMAmO */ ADDRTYPE match src-type !LOCAL limit-out ADDRTYPE match src-type LOCAL random-fully

Chain cali-PREROUTING (1 references)
 pkts bytes target     prot opt in     out     source               destination         
 177K 9768K cali-fip-dnat  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cali:r6XmIziWUJsdOK6Z */

Chain cali-fip-dnat (2 references)
 pkts bytes target     prot opt in     out     source               destination         

Chain cali-fip-snat (1 references)
 pkts bytes target     prot opt in     out     source               destination         

Chain cali-nat-outgoing (1 references)
 pkts bytes target     prot opt in     out     source               destination         
  822 56985 MASQUERADE  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cali:flqWnvo8yq4ULQLa */ match-set cali40masq-ipam-pools src ! match-set cali40all-ipam-pools dst random-fully
